--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -182,8 +182,10 @@
 </div>
 <div class='purchase-btn'>
   <span class='purchase-btn-text'>出品する</span>
-  <a href="#">
-    <%= image_tag 'camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
-  </a>
+    <% if user_signed_in? %>
+        <%= link_to image_tag('camera.png' , size: '185x50' ,class: "purchase-btn-icon"), new_item_path %>
+    <% else %>
+      <%= link_to image_tag('camera.png' , size: '185x50' ,class: "purchase-btn-icon"), new_user_session_path %>
+    <% end %>
 </div>
 <%= render "shared/footer" %>
