--- a/app/views/sold_items/index.html.erb
+++ b/app/views/sold_items/index.html.erb
@@ -33,10 +33,9 @@
     </div>
     <%# /支払額の表示 %>
 
-    <%= form_with url: item_sold_items_path, method: :post, id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
-    <%# <%= form_with model:[@item, @sold_item], id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
+     <%= form_with model: [@item, @sold_item], url: item_sold_items_path, method: :post, id: 'charge-form', class: 'transaction-form-wrap',local: true do |f|  %>
+      <%= render 'shared/error_messages', model: f.object %>
 
-     <%# <%= render 'shared/error_messages', model: f.object %>
     <%# カード情報の入力 %>
     <div class='credit-card-form'>
       <h1 class='info-input-haedline'>
@@ -78,9 +77,9 @@
     <%# /カード情報の入力 %>
     
     <%# 配送先の入力 %>
-    <%# <div class='shipping-address-form'>
-      <h1 class='info-input-haedline'>
-        配送先入力
+     <div class='shipping-address-form'>
+      <h1 class='info-input-haedline'> 
+        <%# 配送先入力 %>
       </h1>
       <div class="form-group">
         <div class='form-text-wrap'>
@@ -88,43 +87,43 @@
           <span class="indispensable">必須</span>
         </div>
         <%= f.text_field :postal_code, class:"input-default", id:"postal-code", placeholder:"例）123-4567", maxlength:"8" %>
-      <%# </div>
+       </div>
       <div class="form-group">
         <div class='form-text-wrap'>
           <label class="form-text">都道府県</label>
           <span class="indispensable">必須</span>
         </div>
-        <%= f.collection_select(:area_id, Area.all, :id, :name, {}, {class:"select-box", id:"prefecture"}) %>
-      <%# </div>
+        <%= f.collection_select(:prefectures_id, Area.all, :id, :name, {}, {class:"select-box", id:"prefecture"}) %>
+       </div>
       <div class="form-group">
         <div class='form-text-wrap'>
           <label class="form-text">市区町村</label>
           <span class="indispensable">必須</span>
-        </div> %>
-        <%# <%= f.text_field :city, class:"input-default", id:"city", placeholder:"例）横浜市緑区"%>
-      <%# </div>
+        </div>
+         <%= f.text_field :city, class:"input-default", id:"city", placeholder:"例）横浜市緑区"%>
+       </div>
       <div class="form-group">
         <div class='form-text-wrap'>
           <label class="form-text">番地</label>
           <span class="indispensable">必須</span>
         </div>
         <%= f.text_field :address, class:"input-default", id:"addresses", placeholder:"例）青山1-1-1"%>
-      <%# </div>
+       </div>
       <div class="form-group">
         <div class='form-text-wrap'>
           <label class="form-text">建物名</label>
-          <span class="form-any">任意</span> %>
-        <%# </div> 
+          <span class="form-any">任意</span> 
+         </div> 
         <%= f.text_field :building_name, class:"input-default", id:"building", placeholder:"例）柳ビル103"%>
-      <%# </div>
+       </div>
       <div class="form-group">
         <div class='form-text-wrap'>
           <label class="form-text">電話番号</label>
           <span class="indispensable">必須</span>
         </div>
         <%= f.text_field :phone_number, class:"input-default", id:"phone-number", placeholder:"例）09012345678",maxlength:"11"%> 
-      <%# </div>
-    </div>   %>
+       </div>
+    </div>  
     <%# /配送先の入力 %>
     <div class='buy-btn'>
       <%= f.submit "購入" ,class:"buy-red-btn" %>
