--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -9,7 +9,7 @@
     <div class='item-img-content'>
       <%= image_tag @item.image ,class:"item-box-img" %>
       <%# 商品が売れている場合は、sold outを表示しましょう %>
-      <% if @sold == 1 %> 
+      <% if @check_if_sold == 1 %> 
          <div class='sold-out'> 
           <span>Sold Out!!</span> 
         </div> 
@@ -35,7 +35,7 @@
       <p class='or-text'>or</p>
       <%= link_to '削除', "#", method: :delete, class:'item-destroy' %>
 
-    <% elsif @sold == 1 %>
+    <% elsif @check_if_sold == 1 %>
 
     <% elsif user_signed_in?  %>
     <%# 商品が売れていない場合はこちらを表示しましょう %>
