商品が購入済みかどうか確認する処理の記述を改善

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -9,12 +9,11 @@
     <div class='item-img-content'>
       <%= image_tag @item.image ,class:"item-box-img" %>
       <%# 商品が売れている場合は、sold outを表示しましょう %>
-      <% if @check_if_sold == 1 %> 
-         <div class='sold-out'> 
+      <% if @item.id == @sold_item %>    <%# 商品が購入済みの場合、true %>
+        <div class='sold-out'> 
           <span>Sold Out!!</span> 
         </div> 
-       <% else %> 
-       <% end %>
+      <% end %>
       <%# //商品が売れている場合は、sold outを表示しましょう %>
     </div>
     <div class="item-price-box">
@@ -35,7 +34,7 @@
       <p class='or-text'>or</p>
       <%= link_to '削除', "#", method: :delete, class:'item-destroy' %>
 
-    <% elsif @check_if_sold == 1 %>
+    <% elsif @item.id == @sold_item %>    <%# 商品が購入済みの場合、true %>
 
     <% elsif user_signed_in?  %>
     <%# 商品が売れていない場合はこちらを表示しましょう %>
