--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -130,13 +130,11 @@
           <li class='list'>
             <div class='item-img-content'>
               <%= image_tag item.image, class:"item-img" if item.image.attached? %>
-              <% @sold_items.each do |sold_item| %>
-                <% if sold_item.item.id == item.id %>
+                <% if item.sold_item != nil %>
                   <div class='sold-out'> 
                     <span>Sold Out!!</span>
                   </div>
                 <% end %>
-              <% end %>
             </div>
             <div class='item-info'>
               <h3 class='item-name'>
