destroyアクションを設定

--- a/app/views/items/update.html.erb
+++ b/app/views/items/update.html.erb
@@ -2,7 +2,7 @@
 <div class="item-show">
   <div class="item-box">
     <h3>更新が完了しました。</h3>
-    <%= link_to '商品一覧へ戻る', item_path(@item.id), method: :get, class:"item-destroy" %>
+    <%= link_to '商品詳細へ戻る', item_path(@item.id), method: :get, class:"item-destroy" %>
   </div>
 </div>
 <%= render "shared/footer" %>
